<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.create_new_event"
    android:id="@+id/add">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/titleText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.87" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/startdate"
            android:id="@+id/textView8" />

        <EditText
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/startDateText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="10/8/2016" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/startTimeTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="12:30 pm"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enddate"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/endDateText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="10/12/2016"
            android:layout_marginLeft="12dp" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/endTimeTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="9:30 pm"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/venue"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/venueText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.87" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/locationText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.87"
            android:text="-37.8215399,145.0343237" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignRight="@+id/linearLayout5"
        android:layout_alignEnd="@+id/linearLayout5"
        android:id="@+id/linearLayout6">

        <Button
            android:text="@string/forwardButton"
            android:id="@+id/forwardButton"
            android:background="@drawable/normal_button"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="50dp"
            android:layout_height="47dp"/>
    </LinearLayout>

</RelativeLayout>
